--- a/Scp035/Scp035.csproj
+++ b/Scp035/Scp035.csproj
@@ -19,19 +19,69 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EXILED" Version="6.0.0-beta.26" />
-      <PackageReference Include="Lib.Harmony" Version="2.2.0" />
-      <PackageReference Include="YamlDotNet" Version="12.0.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Reference Include="Assembly-CSharp" HintPath="$(EXILED_References)\Assembly-CSharp-Publicized.dll" Private="false" />
-      <Reference Include="Assembly-CSharp-firstpass" HintPath="$(EXILED_References)\Assembly-CSharp-firstpass.dll" Private="false" />
-      <Reference Include="CommandSystem.Core" HintPath="$(EXILED_References)\CommandSystem.Core.dll" Private="false" />
-      <Reference Include="Mirror" HintPath="$(EXILED_References)\Mirror.dll" Private="false" />
-      <Reference Include="NorthwoodLib" HintPath="$(EXILED_References)\NorthwoodLib.dll" Private="false" />
-      <Reference Include="UnityEngine.CoreModule" HintPath="$(EXILED_References)\UnityEngine.CoreModule.dll" Private="false" />
-      <Reference Include="UnityEngine.PhysicsModule" HintPath="$(EXILED_References)\UnityEngine.PhysicsModule.dll" Private="false" />
+      <Reference Include="0Harmony">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\0Harmony.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp-firstpass">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\Assembly-CSharp-firstpass.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\Assembly-CSharp-Publicized.dll</HintPath>
+      </Reference>
+      <Reference Include="CommandSystem.Core">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\CommandSystem.Core.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.API">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\Exiled.API.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.CreditTags">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CreditTags.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.CustomItems">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CustomItems.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.CustomRoles">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CustomRoles.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.Events">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Events.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.Loader">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Loader.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.Permissions">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Permissions.dll</HintPath>
+      </Reference>
+      <Reference Include="Exiled.Updater">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Updater.dll</HintPath>
+      </Reference>
+      <Reference Include="Mirror">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\Mirror.dll</HintPath>
+      </Reference>
+      <Reference Include="Mono.Posix">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\Mono.Posix.dll</HintPath>
+      </Reference>
+      <Reference Include="NorthwoodLib">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\NorthwoodLib.dll</HintPath>
+      </Reference>
+      <Reference Include="PluginAPI">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\PluginAPI.dll</HintPath>
+      </Reference>
+      <Reference Include="SemanticVersioning">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\SemanticVersioning.dll</HintPath>
+      </Reference>
+      <Reference Include="System.ComponentModel.DataAnnotations">
+        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\System.ComponentModel.DataAnnotations.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.CoreModule">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\UnityEngine.CoreModule.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.PhysicsModule">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\UnityEngine.PhysicsModule.dll</HintPath>
+      </Reference>
+      <Reference Include="YamlDotNet">
+        <HintPath>..\..\Frameworki\NWAPI\13.0\YamlDotNet.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
