--- a/Scp035/Scp035.csproj
+++ b/Scp035/Scp035.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
       <TargetFramework>net48</TargetFramework>
@@ -16,71 +16,69 @@
       <Nullable>enable</Nullable>
       <AssemblyVersion>5.0.1</AssemblyVersion>
       <FileVersion>5.0.1</FileVersion>
+      <Platforms>AnyCPU;x64</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
       <Reference Include="0Harmony">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\0Harmony.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\dependencies\0Harmony.dll</HintPath>
       </Reference>
       <Reference Include="Assembly-CSharp-firstpass">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\Assembly-CSharp-firstpass.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
       </Reference>
       <Reference Include="Assembly-CSharp">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\Assembly-CSharp-Publicized.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Assembly-CSharp.dll</HintPath>
       </Reference>
       <Reference Include="CommandSystem.Core">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\CommandSystem.Core.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.API">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\Exiled.API.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\SCP Secret Laboratory\PluginAPI\plugins\global\dependencies\Exiled.API.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.CreditTags">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CreditTags.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.CreditTags.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.CustomItems">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CustomItems.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.CustomItems.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.CustomRoles">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.CustomRoles.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.CustomRoles.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.Events">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Events.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.Events.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.Loader">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Loader.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\SCP Secret Laboratory\PluginAPI\plugins\global\Exiled.Loader.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.Permissions">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Permissions.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.Permissions.dll</HintPath>
       </Reference>
       <Reference Include="Exiled.Updater">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\Exiled.Updater.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\EXILED\Plugins\Exiled.Updater.dll</HintPath>
       </Reference>
       <Reference Include="Mirror">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\Mirror.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
       </Reference>
       <Reference Include="Mono.Posix">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\Mono.Posix.dll</HintPath>
+        <HintPath>D:\SigmaWarhead-uwu\SigmaWarhead\bin\x64\Release\Mono.Posix.dll</HintPath>
       </Reference>
       <Reference Include="NorthwoodLib">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\NorthwoodLib.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\NorthwoodLib.dll</HintPath>
       </Reference>
       <Reference Include="PluginAPI">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\PluginAPI.dll</HintPath>
-      </Reference>
-      <Reference Include="SemanticVersioning">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\SemanticVersioning.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\PluginAPI.dll</HintPath>
       </Reference>
       <Reference Include="System.ComponentModel.DataAnnotations">
-        <HintPath>..\..\Frameworki\EXILED\7.2.0\dependencies\System.ComponentModel.DataAnnotations.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\System.ComponentModel.DataAnnotations.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine.CoreModule">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\UnityEngine.CoreModule.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       </Reference>
       <Reference Include="UnityEngine.PhysicsModule">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\UnityEngine.PhysicsModule.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
       </Reference>
       <Reference Include="YamlDotNet">
-        <HintPath>..\..\Frameworki\NWAPI\13.0\YamlDotNet.dll</HintPath>
+        <HintPath>E:\SteamLibrary\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\YamlDotNet.dll</HintPath>
       </Reference>
     </ItemGroup>
 
